/***********************************************************************
X3 ChangeLog

2012-01-26  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/dict-splay.c: Fix for possible crash bugs in dict_splay()
	and dict_remove2();

	* src/tools.c: Fix for crash bug in irccasecmp();

2012-01-24  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/proto-p10.c: Fixed irc_topic() to honour server/hidden_host_type
	and associated config settings.

2012-01-16  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/chanserv.c: Fix for USER AUTOOP option being ignored during
	ChanServ.resync.

2012-01-13  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/opserv.help: Fixed typo in help for TRACE CRITERIA.

2011-11-16  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/nickserv.c: Added a new line to NickServ.accountinfo to show
	new email address for email change cookies.

2011-10-12  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/chanserv.help: Fixed typo in staff register help.

2011-09-29  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/chanserv.help: Fixed typo in durations help.

2011-07-18  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/proto-p10.c: Fix for "PARSE ERROR" on "Ghost 5 Numeric Collided"
	kill message.

2011-06-29  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/nickserv.c: Fixed a bug when reading services/nickserv/hard_maxlogins
	from x3.conf

2011-01-25  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/proto-p10.c: Fix for auto-oper bug where PRIVS were not
	being applied on Nefarious branch versions (or in short reverted
	revision 697:e6fe90cab8d0)

2010-12-06  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/nickserv.c: Fixed bug where NickServ.oregister incorrectly
	logged the password.

2010-10-15  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/proto-p10.c: Fix for P10 BURST message parsing where
	extended bans were causing premature change from ban mask to
	except mask parsing.

2010-09-27  Matthew Beeching  <jobe@mdbnet.co.uk>
